# Conversion_dashboard

./: .env  .gitignore  3.py  3_proj.ipynb  README.md  ads.csv:Zone.Identifier  ads.json  charts_project.ipynb  conversion.json  generaldf.csv  presentation.pdf:Zone.Identifier  pyproject.toml
.ipynb_checkpoints/: charts_project-checkpoint.ipynb
